# qo0-base

./: .clang-format  .clang-format-ignore  .clangd  .gitignore  .gitmodules  CMakeLists.txt  readme.md
base/: common.h  core.cpp  features.cpp  features.h  qo0_imconfig.h  sdk.cpp  sdk.h  user.h
base/core/: config.cpp  config.h  convar.cpp  convar.h  entitylistener.cpp  entitylistener.h  eventlistener.cpp  eventlistener.h  hooks.cpp  hooks.h  interfaces.cpp  interfaces.h  menu.cpp  menu.h  netvar.cpp  netvar.h  proxies.cpp  proxies.h  variables.h
base/features/: animationcorrection.cpp  animationcorrection.h  autowall.cpp  autowall.h  lagcompensation.cpp  lagcompensation.h  legit.h  misc.cpp  misc.h  prediction.cpp  prediction.h  rage.h  visual.cpp  visual.h
base/features/legit/: triggerbot.cpp  triggerbot.h
base/features/misc/: movement.cpp  movement.h
base/features/rage/: antiaim.cpp  antiaim.h
base/features/visual/: chams.cpp  chams.h  glow.cpp  glow.h  overlay.cpp  overlay.h  screen.cpp  screen.h  world.cpp  world.h
base/sdk/: animation.cpp  animation.h  bitbuf.h  bonemergecache.h  bonesetup.h  bspflags.h  const.h  econitem.h  entity.cpp  entity.h  entitymapdata.h  studio.cpp  studio.h  thread.h
base/sdk/datatypes/: basehandle.h  bitvec.h  color.h  datamap.h  datatable.h  keyvalues.h  matrix.cpp  matrix.h  qangle.cpp  qangle.h  quaternion.h  usercmd.h  utlbuffer.h  utlfixedmemory.h  utllinkedlist.h  utlmap.h  utlmemory.h  utlrbtree.h  utlreference.h  utlstack.h  utlstring.h  utlsymbol.h  utlvector.h  vector.cpp  vector.h
base/sdk/hash/: crc32.cpp  crc32.h  fnv1a.h  md5.cpp  md5.h
base/sdk/interfaces/: ibaseclientdll.h  ibaseinterface.h  ibreakablewithpropdata.h  icliententitylist.h  iclientleafsystem.h  iclientmode.h  iclientstate.h  iconvar.h  ieconitemsystem.h  ieffects.h  iengineclient.h  ienginesound.h  ienginetrace.h  ienginevgui.h  ifilesystem.h  igameeventmanager.h  igamemovement.h  iglobalvars.h  iglowmanager.h  ihud.h  iinput.h  iinputsystem.h  ikeyvaluessystem.h  ilocalize.h  imatchframework.h  imaterial.h  imaterialsystem.h  imatrendercontext.h  imdlcache.h  imemalloc.h  inetchannel.h  inetworkstring.h  ipanel.h  iphysicssurfaceprops.h  iprediction.h  irecipientfilter.h  irefcount.h  iservergamedll.h  isteamclient.h  isteamgamecoordinator.h  (+10 more)
base/utilities/: binary.h  crt.h  detourhook.h  draw.cpp  draw.h  inputsystem.cpp  inputsystem.h  log.cpp  log.h  math.h  memory.cpp  memory.h  win.h
cmake/: i386-pc-windows-msvc.cmake  x86_64-pc-windows-msvc.cmake
dependencies/: CMakeLists.txt  xorstr.h
extensions/: binary.h  json.h  toml.h
